# demo

./: .gitignore  Cargo.toml  MoonZoon.toml  Procfile  README.md  buildpack-run.sh  mzoon_commit
app/: .gitignore  README.md  mzoon_commit
app/frontend/: Cargo.toml
app/shared/: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
shared/: Cargo.toml
